# ioc.py

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ioc/: __init__.py  _resolver.py
tests/: conftest.py  test_ioc.py
