[project]
name = "ioc-py"
version = "0.1.0"
description = "A lightweight dependency inversion/IoC container for Python"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ioc"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
