[project]
name = "type-ioc"
version = "0.1.0"
description = "A lightweight dependency inversion/IoC container for Python"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ioc"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
